# fastapi_tritonserver

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start_api.sh  start_openapi.sh
docs/: deploy_triton.md
src/fastapi_tritonserver/: config.py  constants.py  ctx.py  logger.py  sampling_params.py
src/fastapi_tritonserver/engine/: engine.py  tritonserver.py
src/fastapi_tritonserver/entrypoints/: api_server.py  openai_api.py
src/fastapi_tritonserver/models/: base_model.py  prompt_template.py  qwen2chat.py  qwenvl.py
src/fastapi_tritonserver/protocols/: fastapi.py  openai.py
src/fastapi_tritonserver/utils/: generate_cfg.py  tools.py
src/triton_server_helper/: client.py
