[project]
name = "fastapi_tritonserver"
version = "0.0.1"
authors = [
    {name="zhaohb", email="zhaohbcloud@126.com"},
    {name="Tlntin", email="tlntindeng01@gmail.com"},
]
description = "Support openai api format input for tritonserver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "tritonclient[all]",
    "SentencePiece",
    "numpy",
    "transformers",
    "torch", # generation.utils need torch
    "torchvision", # need by qwen-vl
]

[project.urls]
"Homepage" = "https://github.com/zhaohb/fastapi_tritonserver_test"
"Bug Tracker" = "https://github.com/zhaohb/fastapi_tritonserver_test/issues"
